Sat Nov 29 11:13:06 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_traits.cpp (visit_array):
        
          Added logic to insert an underscore prefix in the last
          component of the scoped array name and array slice name,
          if the array is fully anonymous, meaning not in the 
          case where it is a typedef of an anonymous sequence member.
          
        * TAO_IDL/be/be_visitor_array/array_ch.cpp (visit_array):
        
          Eliminated an unnecessary temporary local variable.
          
        * tests/IDL_Test/anonymous.idl:
        
          Cosmetic change.

Sat Nov 29 09:43:09 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_traits.cpp (visit_field):
        
          Added check to skip code generation for any kind of field except
          an anonymous array. Traits specializations are generated for
          interfaces, valuetypes and arrays. When visiting the field members
          of a struct, union or exception, we want to generate traits
          specialiations only for anonymous arrays, since all the other
          cases are handled elsewhere, at the point of declaration.

Fri Nov 28 22:46:33 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/Messaging/Asynch_Invocation.cpp:

	  When sending a AMI call, pass a oneway identifier so that the
	  required infrastructure within the ORB for request buffering,
	  non-blocking semantics with LF flushing strategy etc. fires. 

Fri Nov 28 21:39:53 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_traits.cpp:
        * TAO_IDL/be_include/be_visitor_traits.h:
        
          - Added check in visit_array() to skip code generation if the node
            is imported.
            
          - Added methods visit_field, visit_exception, visit_structure and
            visit_union to the visitor class, to catch anonymous arrays