@@ -1,3 +1,12 @@
+Sat Nov 29 11:42:48 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
+
+        * tao/TypeCodeFactory/TypeCodeFactory_i.cpp:
+        
+          Plugged potential memory leak in handling datatypes
+          servicing recursive typecodes, with a patch modified
+          from one sent in by Harvinder Sawhney 
+          <harvinder_sawhney@agilent.com>.
+
 Sat Nov 29 11:13:06 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * TAO_IDL/be/be_visitor_traits.cpp (visit_array):
